Change Points to Point, Change Preferences to Preference, change Weight attribute name

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -186,6 +186,20 @@
     <script src="scripts/app/entities/preferences/preferences-detail.controller.js"></script>
     <script src="scripts/components/entities/preferences/preferences.service.js"></script>
     <script src="scripts/components/entities/preferences/preferences.search.service.js"></script>
+    <script src="scripts/app/entities/point/point.js"></script>
+    <script src="scripts/app/entities/point/point.controller.js"></script>
+    <script src="scripts/app/entities/point/point-dialog.controller.js"></script>
+    <script src="scripts/app/entities/point/point-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/point/point-detail.controller.js"></script>
+    <script src="scripts/components/entities/point/point.service.js"></script>
+    <script src="scripts/components/entities/point/point.search.service.js"></script>
+    <script src="scripts/app/entities/preference/preference.js"></script>
+    <script src="scripts/app/entities/preference/preference.controller.js"></script>
+    <script src="scripts/app/entities/preference/preference-dialog.controller.js"></script>
+    <script src="scripts/app/entities/preference/preference-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/preference/preference-detail.controller.js"></script>
+    <script src="scripts/components/entities/preference/preference.service.js"></script>
+    <script src="scripts/components/entities/preference/preference.search.service.js"></script>
     <!-- endbuild -->
     <script type="text/javascript">
     $.material.init()
