--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>21points</title>
-        <meta name="description" content="">
+        <title>21-Points Health</title>
+        <meta name="description" content="21-Points Health is an app to monitor your health. You can get up to three points per day, by eating right, drinking less alcohol and exercising. It also lets you track your blood pressure and weight. Written as the sample application for the JHipster Mini-Book.">
         <meta name="google" value="notranslate">
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -30,7 +30,11 @@
             <div class="well" ui-view="content"></div>
 
             <div class="footer">
-                <p translate="footer">This is your footer</p>
+                <p translate="footer">
+                    <strong>21-Points Health</strong> | An application developed for a better life and
+                    <a href='http://www.jhipster-book.com' target='_blank'>The JHipster Mini-Book</a> |
+                    By <a href='http://raibledesigns.com' target='_blank'>Matt Raible</a>
+                </p>
             </div>
         </div>
 
