--- a/src/main/webapp/scripts/app/entities/bloodPressure/bloodPressure-detail.html
+++ b/src/main/webapp/scripts/app/entities/bloodPressure/bloodPressure-detail.html
@@ -1,6 +1,6 @@
 
 <div>
-    <h2><span translate="21pointsApp.bloodPressure.detail.title">BloodPressure</span> {{bloodPressure.id}}</h2>
+    <h2><span translate="21pointsApp.bloodPressure.detail.title">BloodPressure</span></h2>
     <div class="table-responsive">
         <table class="table table-striped">
             <thead>
