--- a/src/main/webapp/scripts/app/entities/point/point-dialog.html
+++ b/src/main/webapp/scripts/app/entities/point/point-dialog.html
@@ -41,7 +41,7 @@
         </div>
         <div class="form-group">
             <label class="control-label" translate="21pointsApp.point.notes" for="field_notes">Notes</label>
-            <input type="number" class="form-control" name="notes" id="field_notes"
+            <input type="text" class="form-control" name="notes" id="field_notes"
                     ng-model="point.notes"
                      />
         </div>
