--- a/src/main/webapp/scripts/app/entities/bloodPressure/bloodPressure-dialog.html
+++ b/src/main/webapp/scripts/app/entities/bloodPressure/bloodPressure-dialog.html
@@ -8,7 +8,7 @@
     </div>
     <div class="modal-body">
         <jh-alert-error></jh-alert-error>
-        <div class="form-group">
+        <div class="form-group" ng-show="bloodPressure.id">
             <label for="id" translate="global.field.id">ID</label>
             <input type="text" class="form-control" id="id" name="id"
                     ng-model="bloodPressure.id" readonly />
