--- a/src/main/webapp/scripts/app/entities/bloodPressure/bloodPressures.html
+++ b/src/main/webapp/scripts/app/entities/bloodPressure/bloodPressures.html
@@ -1,31 +1,34 @@
 <div>
-    <h2 translate="21pointsApp.bloodPressure.home.title">BloodPressures</h2>
     <jh-alert></jh-alert>
-    <div class="container">
+
         <div class="row">
-            <div class="col-md-4">
-                <button class="btn btn-primary" ui-sref="bloodPressure.new">
-                    <span class="glyphicon glyphicon-flash"></span> <span translate="21pointsApp.bloodPressure.home.createLabel">Create a new BloodPressure</span>
-                </button>
+            <div class="col-sm-7">
+                <h2 translate="21pointsApp.bloodPressure.home.title">Blood Pressures</h2>
             </div>
-            <div class="col-md-8">
+            <div class="col-sm-5 text-right">
                 <form name="searchForm" class="form-inline">
-                    <div class="form-group">
-                        <input type="text" class="form-control" ng-model="searchQuery" id="searchQuery" placeholder="query">
+                    <div class="form-group p-r">
+                        <input type="text" class="form-control" ng-model="searchQuery" id="searchQuery"
+                               placeholder="{{'entity.action.search' | translate}}">
                     </div>
-                    <button class="btn btn-info" ng-click="search()"><span class="glyphicon glyphicon-search"></span> <span>Search a BloodPressure</span>
+                    <button class="btn btn-info btn-sm" ng-click="search()"
+                            tooltip="{{'entity.action.search' | translate}}">
+                        <i class="glyphicon glyphicon-search"></i>
+                    </button>
+                    <button class="btn btn-primary btn-sm" ui-sref="bloodPressure.new"
+                            tooltip="{{'entity.action.new' | translate}}">
+                        <span class="glyphicon glyphicon-plus"></span>
                     </button>
                 </form>
             </div>
         </div>
-    </div>
+
 
     <div class="table-responsive">
         <table class="table table-striped">
             <thead>
                 <tr jh-sort="predicate" ascending="reverse" callback="reset()">
-                    <th jh-sort-by="id"><span translate="global.field.id">ID</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="timestamp"><span translate="21pointsApp.bloodPressure.timestamp">Timestamp</span> <span class="glyphicon glyphicon-sort"></span></th>
+                     <th jh-sort-by="timestamp"><span translate="21pointsApp.bloodPressure.timestamp">Timestamp</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="systolic"><span translate="21pointsApp.bloodPressure.systolic">Systolic</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="diastolic"><span translate="21pointsApp.bloodPressure.diastolic">Diastolic</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="user.login"><span translate="21pointsApp.bloodPressure.user">user</span> <span class="glyphicon glyphicon-sort"></span></th>
@@ -34,8 +37,7 @@
             </thead>
             <tbody infinite-scroll="loadPage(page + 1)" infinite-scroll-disabled="links['last'] == page">
                 <tr ng-repeat="bloodPressure in bloodPressures track by bloodPressure.id">
-                    <td><a ui-sref="bloodPressure.detail({id:bloodPressure.id})">{{bloodPressure.id}}</a></td>
-                        <td>{{bloodPressure.timestamp | date:'mediumDate'}}</td>
+                    <td>{{bloodPressure.timestamp | date:'mediumDate'}}</td>
                     <td>{{bloodPressure.systolic}}</td>
                     <td>{{bloodPressure.diastolic}}</td>
                     <td>
