--- a/src/main/webapp/scripts/app/entities/point/point-dialog.html
+++ b/src/main/webapp/scripts/app/entities/point/point-dialog.html
@@ -4,15 +4,10 @@
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                 ng-click="clear()">&times;</button>
-        <h4 class="modal-title" id="myPointLabel" translate="21pointsApp.point.home.createOrEditLabel">Create or edit a Point</h4>
+        <h4 class="modal-title" translate="21pointsApp.point.home.createLabel" ng-hide="points.id">Add Points</h4>
     </div>
     <div class="modal-body">
         <jh-alert-error></jh-alert-error>
-        <div class="form-group">
-            <label for="id" translate="global.field.id">ID</label>
-            <input type="text" class="form-control" id="id" name="id"
-                    ng-model="point.id" readonly />
-        </div>
         <div class="form-group">
             <label class="control-label" translate="21pointsApp.point.date" for="field_date">Date</label>
             <input id="field_date" type="text" class="form-control" uib-datepicker-popup="{{dateformat}}" ng-model="point.date" is-open="datePickerForDate.status.opened"
@@ -22,22 +17,31 @@
             </span>
         </div>
         <div class="form-group">
-            <label class="control-label" translate="21pointsApp.point.exercise" for="field_exercise">Exercise</label>
-            <input type="number" class="form-control" name="exercise" id="field_exercise"
-                    ng-model="point.exercise"
-                     />
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" ng-model="point.exercise" id="field_exercise"
+                           ng-true-value="1" ng-false-value="0" />
+                    <label translate="21pointsApp.point.exercise" for="field_exercise">Exercise</label>
+                </label>
+            </div>
         </div>
         <div class="form-group">
-            <label class="control-label" translate="21pointsApp.point.meals" for="field_meals">Meals</label>
-            <input type="number" class="form-control" name="meals" id="field_meals"
-                    ng-model="point.meals"
-                     />
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" ng-model="point.meals" id="field_meals"
+                           ng-true-value="1" ng-false-value="0">
+                    <label translate="21pointsApp.point.meals" for="field_meals">Meals</label>
+                </label>
+            </div>
         </div>
         <div class="form-group">
-            <label class="control-label" translate="21pointsApp.point.alcohol" for="field_alcohol">Alcohol</label>
-            <input type="number" class="form-control" name="alcohol" id="field_alcohol"
-                    ng-model="point.alcohol"
-                     />
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" ng-model="point.alcohol" id="field_alcohol"
+                           ng-true-value="1" ng-false-value="0">
+                    <label translate="21pointsApp.point.alcohol" for="field_alcohol">Alcohol</label>
+                </label>
+            </div>
         </div>
         <div class="form-group">
             <label class="control-label" translate="21pointsApp.point.notes" for="field_notes">Notes</label>
