Change homepage UI and testcase

--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -6,10 +6,26 @@
         <div class="col-md-8">
             <h1 translate="main.title">Welcome, Java Hipster!</h1>
             <p class="lead" translate="main.subtitle">This is your homepage</p>
-
             <div ng-switch="isAuthenticated()">
                 <div class="alert alert-success" ng-switch-when="true" translate="main.logged.message" translate-values="{username: '{{account.login}}'}">
-                    You are logged in as user "{{account.login}}".
+                    Your are logged in as user "{{account.login}}".
+                </div>
+
+                <div ng-switch-when="true">
+                    <div class="row">
+                        <div class="col-md-6 col-xs-5">
+                            <h4 translate="main.point.thisWeek" class="m-t-sm hidden-xs"
+                                translate-values="{date: '{{pointThisWeek.week | date: 'longDate'}}'}">
+                                Points for the week of {{pointThisWeek.week | date: 'longDate'}}:
+                            </h4>
+                            <h4 translate="main.point.thisWeekMobile" class="m-t-sm visible-xs">
+                                Points for {{pointThisWeek.week | date: 'longDate'}}:
+                            </h4>
+                        </div>
+                        <div class="col-md-4 text-right">
+                            <a ui-sref="point.add" class="btn btn-primary btn-raised m-n m-b-xs">Add Points</a>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="alert alert-warning" ng-switch-when="false" translate="global.messages.info.authenticated">
