--- a/src/main/webapp/scripts/app/entities/bloodPressure/bloodPressures.html
+++ b/src/main/webapp/scripts/app/entities/bloodPressure/bloodPressures.html
@@ -12,11 +12,11 @@
                                placeholder="{{'entity.action.search' | translate}}">
                     </div>
                     <button class="btn btn-info btn-sm" ng-click="search()"
-                            tooltip="{{'entity.action.search' | translate}}">
+                            uibTooltip="{{'entity.action.search' | translate}}">
                         <i class="glyphicon glyphicon-search"></i>
                     </button>
                     <button class="btn btn-primary btn-sm" ui-sref="bloodPressure.new"
-                            tooltip="{{'entity.action.new' | translate}}">
+                            uibTooltip="{{'entity.action.new' | translate}}">
                         <span class="glyphicon glyphicon-plus"></span>
                     </button>
                 </form>
