--- a/src/main/webapp/scripts/app/entities/point/point-dialog.html
+++ b/src/main/webapp/scripts/app/entities/point/point-dialog.html
@@ -10,17 +10,23 @@
         <jh-alert-error></jh-alert-error>
         <div class="form-group">
             <label class="control-label" translate="21pointsApp.point.date" for="field_date">Date</label>
-            <input id="field_date" type="text" class="form-control" uib-datepicker-popup="{{dateformat}}" ng-model="point.date" is-open="datePickerForDate.status.opened"
-            />
+            <input id="field_date" name="date" type="text" class="form-control" uib-datepicker-popup="{{dateformat}}" ng-model="point.date" is-open="datePickerForDate.status.opened"
+                   required />
             <span class="input-group-btn">
                 <button type="button" class="btn btn-default" ng-click="datePickerForDateOpen($event)"><i class="glyphicon glyphicon-calendar"></i></button>
             </span>
+            <div ng-show="editForm.date.$invalid">
+                <p class="help-block"
+                   ng-show="editForm.date.$error.required" translate="entity.validation.required">
+                    This field is required.
+                </p>
+            </div>
         </div>
         <div class="form-group">
             <div class="checkbox">
                 <label>
                     <input type="checkbox" ng-model="point.exercise" id="field_exercise"
-                           ng-true-value="1" ng-false-value="0" />
+                           ng-true-value="1" ng-false-value="0"/>
                     <label translate="21pointsApp.point.exercise" for="field_exercise">Exercise</label>
                 </label>
             </div>
@@ -47,7 +53,14 @@
             <label class="control-label" translate="21pointsApp.point.notes" for="field_notes">Notes</label>
             <input type="text" class="form-control" name="notes" id="field_notes"
                     ng-model="point.notes"
+                    ng-maxlength="140" rows="3"
                      />
+            <div ng-show="editForm.notes.$invalid">
+                <p class="help-block"
+                   ng-show="editForm.notes.$error.maxlength" translate="entity.validation.maxlength" translate-value-max="140">
+                    This field cannot be longer than 140 characters.
+                </p>
+            </div>
         </div>
         <div class="form-group" has-authority="ROLE_ADMIN">
             <label translate="21pointsApp.point.user" for="field_user">user</label>
