Blood Pressure client finished

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/bootstrap-material-design.css" />
         <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/ripples.css" />
+        <link rel="stylesheet" href="bower_components/nvd3/build/nv.d3.css" />
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css assets/styles/main.css -->
@@ -77,6 +78,9 @@
         <script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
         <script src="bower_components/bootstrap-material-design/dist/js/material.js"></script>
         <script src="bower_components/bootstrap-material-design/dist/js/ripples.js"></script>
+        <script src="bower_components/d3/d3.js"></script>
+        <script src="bower_components/nvd3/build/nv.d3.js"></script>
+        <script src="bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
@@ -162,6 +166,7 @@
     <script src="scripts/app/admin/tracker/tracker.js"></script>
     <script src="scripts/app/admin/tracker/tracker.controller.js"></script>
     <script src="scripts/components/tracker/tracker.service.js"></script>
+    <script src="scripts/components/chart/chart.service.js"></script>
     <script src="scripts/app/entities/weight/weight.js"></script>
     <script src="scripts/app/entities/weight/weight.controller.js"></script>
     <script src="scripts/app/entities/weight/weight-dialog.controller.js"></script>
