Weight frontend OK

--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -28,69 +28,119 @@
                             <a ui-sref="point.add" class="btn btn-primary btn-raised m-n m-b-xs">Add Points</a>
                         </div>
                     </div>
-                </div>
 
-                <div class="row">
-                    <div class="col-md-10">
-                        <div class="progress progress-lg" ng-show="pointsThisWeek.points">
-                            <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar"
-                                 ng-class="{'progress-bar-success': pointsThisWeek.points >= preferences.weeklyGoal,
+                    <div class="row">
+                        <div class="col-md-10">
+                            <div class="progress progress-lg" ng-show="pointsThisWeek.points">
+                                <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar"
+                                     ng-class="{'progress-bar-success': pointsThisWeek.points >= preferences.weeklyGoal,
                                     'progress-bar-danger': pointsThisWeek.points < 10,
                                     'progress-bar-warning': pointsThisWeek.points > 10 &&
                                         pointsThisWeek.points < preferences.weeklyGoal}"
-                                 aria-valuenow="{{pointsThisWeek.points}}"
-                                 aria-valuemin="0" aria-valuemax="21" style="width: {{pointsPercentage}}%">
-                                {{pointsThisWeek.points}} / Goal: {{preferences.weeklyGoal}}
+                                     aria-valuenow="{{pointsThisWeek.points}}"
+                                     aria-valuemin="0" aria-valuemax="21" style="width: {{pointsPercentage}}%">
+                                    {{pointsThisWeek.points}} / Goal: {{preferences.weeklyGoal}}
+                                </div>
                             </div>
+                            <uib-alert type="info" ng-hide="pointsThisWeek.points">
+                                No points yet this week, better get moving!
+                            </uib-alert>
                         </div>
-                        <uib-alert type="info" ng-hide="pointsThisWeek.points">
-                            No points yet this week, better get moving!
-                        </uib-alert>
                     </div>
-                </div>
 
-                <div class="row">
-                    <p class="m-t-md col-md-10">
-                        <a ui-sref="preference.add" class="pull-right">Edit Preferences</a>
-                        <a ui-sref="history">View History</a>
-                    </p>
-                </div>
+                    <div class="row m-t-sm">
+                        <div class="col-md-6 col-xs-3 text-nowrap">
+                            <h4 class="m-t-md hidden-xs" translate="main.bloodPressure">Blood Pressure:</h4>
+                            <h4 class="m-t-md visible-xs" translate="main.bloodPressureMobile">BP:</h4>
+                        </div>
+                        <div class="col-md-4 text-right">
+                            <a ui-sref="bloodPressure.add" class="btn btn-default btn-sm btn-raised">
+                                Add Blood Pressure</a>
+                        </div>
+                    </div>
 
-                <div class="row">
-                    <div class="col-md-10">
+                    <div class="row">
+                        <div class="col-md-10">
                         <span ng-if="bpReadings.readings.length">
                             <nvd3 options="bpOptions" data="bpData" class="with-3d-shadow with-transitions"></nvd3>
                         </span>
                         <span ng-if="!bpReadings.readings.length">
                             <alert type="info">No blood pressure readings found.</alert>
                         </span>
+                        </div>
                     </div>
+
+                    <div class="row">
+                        <div class="col-md-6 col-xs-6">
+                            <h4 class="m-t-md" translate="main.weight">Weight:</h4>
+                        </div>
+                        <div class="col-md-4 text-right">
+                            <a ui-sref="weight.add" class="btn btn-default btn-sm btn-raised">Add Weight</a>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-10">
+                            <span ng-if="weights.weighIns.length">
+                                <nvd3 options="weightOptions" data="weightData" class="with-3d-shadow with-transitions"></nvd3>
+                            </span>
+                            <span ng-if="!weights.weighIns.length">
+                                <alert type="info">No weigh-ins found.</alert>
+                            </span>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <p class="m-t-md col-md-10">
+                            <a ui-sref="preference.add" class="pull-right">Edit Preferences</a>
+                            <a ui-sref="history">View History</a>
+                        </p>
+                    </div>
+
+                    <p translate="main.logged.message" translate-values="{username: '{{account.login}}'}"
+                       style="border-top: 1px solid silver; padding-top: 5px; margin-top: 40px">
+                        You are logged in as user "{{account.login}}".
+                    </p>
                 </div>
 
-                <div class="alert alert-warning" ng-switch-when="false" translate="global.messages.info.authenticated">
-                    If you want to <a class="alert-link" href="#/login">sign in</a>, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").
-                </div>
 
-                <div class="alert alert-warning" ng-switch-when="false" translate="global.messages.info.register">
-                    You don't have an account yet? <a class="alert-link" href="#/register">Register a new account</a>
+                <div ng-switch-when="false">
+                    <p><strong>
+                        To get started, please
+                        <a ui-sref="login"><span class="glyphicon glyphicon-log-in"></span>
+                            &#xA0;<span translate="global.menu.account.login">Authenticate</span>.</a>
+                    </strong>
+                    </p>
+
+                    <p>
+                        <a ui-sref="about" class="btn btn-info hidden-xs">
+                            Learn more about 21-Points Health
+                            <div class="ripple-wrapper"></div></a>
+                        <a ui-sref="about" class="btn btn-info visible-xs">
+                            Learn more
+                            <div class="ripple-wrapper"></div></a>
+                    </p>
+
+                    <p translate="main.question">
+                        If you have any question on JHipster:
+                    </p>
+
+                    <ul id="resources">
+                        <li><a href="http://www.jhipster-book.com" target="_blank"
+                               translate="main.link.homepage">JHipster homepage</a></li>
+                        <li><a href="http://stackoverflow.com/tags/jhipster/info" target="_blank"
+                               translate="main.link.stackoverflow">JHipster on Stack Overflow</a></li>
+                        <li><a href="https://twitter.com/jhipster_book" target="_blank"
+                               translate="main.link.contact">Contact @java_hipster on Twitter</a></li>
+                        <li><a href="https://github.com/mraible/21-points/issues" target="_blank"
+                               translate="main.link.issues">Report an issue</a></li>
+                    </ul>
+
+                    <p translate="global.messages.info.register">
+                        Don't have an account yet? <a href="#/register">Register a new account</a>.
+                    </p>
                 </div>
             </div>
-
-            <p translate="main.question">
-                If you have any question on JHipster:
-            </p>
-
-            <ul>
-                <li><a href="http://jhipster.github.io/" target="_blank" translate="main.link.homepage">JHipster homepage</a></li>
-                <li><a href="http://stackoverflow.com/tags/jhipster/info" target="_blank" translate="main.link.stackoverflow">JHipster on Stack Overflow</a></li>
-                <li><a href="https://github.com/jhipster/generator-jhipster/issues?state=open" target="_blank" translate="main.link.bugtracker">JHipster bug tracker</a></li>
-                <li><a href="https://gitter.im/jhipster/generator-jhipster" target="_blank" translate="main.link.chat">JHipster public chat room</a></li>
-                <li><a href="https://twitter.com/java_hipster" target="_blank"  translate="main.link.contact">contact @java_hipster on Twitter</a></li>
-            </ul>
-
-            <p>
-             <span translate="main.like">If you like JHipster, don't forget to give us a star on </span>&nbsp;<a href="https://github.com/jhipster/generator-jhipster" target="_blank" translate="main.github">Github</a>!
-            </p>
         </div>
     </div>
 </div>
